--- a/manifest-3.json
+++ b/manifest-3.json
@@ -1,5 +1,5 @@
 {
-  "manifest_version": 2,
+  "manifest_version": 3,
 
   "name": "Google Scholar Tools",
   "description": "This extension provides some additional bookmarking and sorting of google scholar results.",
@@ -10,7 +10,11 @@
     "default_popup": "popup.html"
   },
   "permissions": [
+    "activeTab",
     "storage",
+	"tabs"
+  ],
+  "host_permissions": [
 	"*://scholar.google.com/*"
   ],
   "content_scripts": [
